# ml_api_project

./: .gitignore  Dockerfile  README.md  docker-compose.yml  label_encoder.joblib  model.joblib  pyproject.toml
app/: config.py  crud.py  database.py  main.py  models.py  schemas.py  security.py
app/routers/: predict.py  train.py
scripts/: pretrain.py
tests/: test_crud.py  test_main,py
