[tool.poetry]
name = "ml_api_project"
version = "0.1.0"
description = "ML API Project"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
fastapi = "0.68.2"
uvicorn = "0.15.0"
pydantic = "1.10.17"
scikit-learn = "0.24.2"
pymongo = "3.13.0"
joblib = "1.4.2"
numpy = "1.21.4"
pandas = "1.3.3"

[tool.poetry.dev-dependencies]
pytest = "6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
